# follow-me-drone

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml
docs/: architecture.md
followme/: __init__.py  commands.py  config.py  drone_controller.py  face_detector.py  gesture.py  ipc.py  pid.py  utils.py
scripts/: run_gesture.py  run_tracker.py
